Header mobile spacing fix

--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -61,6 +61,8 @@
         align-items: flex-start
         min-height: calc(100vh - 104px)
         padding: 48px 32px 44px
+    +s
+        min-height: unset
     +dark
         border-color: $neutrals3
         +d
